# painel-ppag-loa

./: README.md  datapackage.yaml  pyproject.toml
data-raw/: BASE_ORCAM_RECEITA_FISCAL.csv  BASE_ORCAM_RECEITA_INVESTIMENTO.csv  BASE_QDD_FISCAL.csv  acoes_planejamento.csv  base_qdd_investimento.csv  indicadores_planejamento.csv  tab_auxiliar_IPU.csv  tab_auxiliar_despesa_IAG.csv  tab_auxiliar_despesa_fontes.csv  tab_auxiliar_despesa_funcao.csv  tab_auxiliar_despesa_grupo.csv  tab_auxiliar_despesa_poder.csv  tab_auxiliar_elemento.csv  tab_auxiliar_glossario.csv  tab_auxiliar_investimentos_uo.csv  tab_auxiliar_programa.csv
