[project]
name = "painel-loa-ppag"
version = "0.1.0"
description = ""
authors = [
    {name = "Viviane Gonçalves Porto Nascimento",email = "149175818+vivianenascimento@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "frictionless (>=5.18.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
